--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -53,17 +53,30 @@ nav ul {
 }
 
 nav ul li a {
-  text-decoration: none;  /* Remove underline */
-  color: #fff;            /* White text */
+  text-decoration: none; 
+  color: #fff;            
   font-weight: 500;
-  padding: 0.5rem 1rem;   /* Clickable area */
-  border-radius: 5px;     /* Rounded corners */
+  padding: 0.5rem 1rem;   
+  border-radius: 5px;     
   transition: all 0.3s ease;
 }
 
 footer {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
+
+#search {
+  border-radius: 10px;
+  margin: 15px;
+  padding: 15px;
+}
+
+.sr-only {
+  margin: 15px;
+  padding: 15px;
+
+}
+
 
 
