--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,4 +5,7 @@
 {% endblock %}
 
 {% block content %}
+{% if user.is_authenticated%}
+<p>Welcome {{user.username }}</p>
+{% endif %}
 {% endblock %}
