--- a/main_app/templates/parts/search_results.html
+++ b/main_app/templates/parts/search_results.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %} {% load static %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/parts/part-index.css' %}">
-<title>Part's</title>
+<link rel="stylesheet" href="{% static 'css/parts/search-part.css' %}">
 {% endblock %}
+
 
 {% block content %}
 <div>
@@ -16,7 +16,6 @@
         <img src="{{ part.img.url }}" alt="{{ part.name }}" />
       {% endif %}
       <h2>{{ part.name }}</h2>
-      <p>${{ part.price }}</p>
       </a>
     </div>
   {% empty %}
